syntax = "proto3";
option java_multiple_files = true;

package wordcounter;

service WordCounterServiceBase {
  rpc countWords (CountRequest) returns (CountResponse) {}
}

message CountRequest {
  string message = 1;
}

message CountResponse {
  int32 count = 1;
}

